<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_friends" />

        <item
            android:id="@+id/nav_my_parties"
            android:icon="@drawable/ic_my_parties_black_24dp"
            android:title="@string/nav_my_parties" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/nav_messages" />

        <item
            android:id="@+id/nav_all_users"
            android:icon="@drawable/ic_friends_black_24dp"
            android:title="@string/nav_users" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/nav_signout" />
        </menu>
    </item>

</menu>
