<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificEventActivity"
    xmlns:tipbook="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/specific_party" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            tipbook:contentPadding="5dp"
            tipbook:cardElevation="10dp"
            card_view:cardBackgroundColor="@color/white">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/card"
                android:contentDescription="@string/party_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tipbook:contentPadding="5dp"
            tipbook:cardElevation="10dp"
            card_view:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:id="@+id/textlinearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_for_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_for_date"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_for_address"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_for_price"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/desc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_for_description"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp" />

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <Button
                android:id="@+id/join_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/ic_join_party"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/leave_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/ic_leave_party"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/payment_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/ic_contribute"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/chat_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/ic_chat"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>